--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -21,7 +21,7 @@ $brand-danger: #bf5329;
 $header-main-color: #a0793f;
 $img_header: #fff url("/img/header_ornament.png") no-repeat 24% 0;
 // footer
-$img_footer: #37474f url("/img/footer_ornament.png") no-repeat 24% 100%;
+$img_footer: #37474f url("/img/footer_ornament.png") no-repeat;
 
 // Typography
 $icon-font-path: "~bootstrap-sass/assets/fonts/bootstrap/";
