--- a/resources/assets/sass/theme/_footer.scss
+++ b/resources/assets/sass/theme/_footer.scss
@@ -2,4 +2,6 @@ footer {
 	background: $img_footer;
 	line-height: 22px;
 	padding-top:70px;
+	background-size: unset;
+	background-position: bottom right;
 }
