--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11548,11 +11548,15 @@ header #global-nav.scrolled-nav .logo-icon {
 }
 
 footer {
-  background: #37474f url("/img/footer_ornament.png") no-repeat;
+  background: #37474f url("/img/footer_ornament1.png") no-repeat;
   line-height: 22px;
   padding-top: 70px;
   background-size: unset;
   background-position: bottom right;
+}
+
+footer .footer-menu {
+  margin-bottom: 70px;
 }
 
 footer .footer-menu ul {
@@ -11575,16 +11579,45 @@ footer .footer-menu ul li a:focus {
   text-decoration: none;
 }
 
-footer .social-media a {
+footer .footer-menu .mobile-apps a img {
+  margin: 0;
+  margin-left: auto;
+}
+
+footer .footer-menu .social-media {
+  margin-bottom: 20px;
+}
+
+footer .footer-menu .social-media a {
   padding: 10px;
   background: #fff;
   border-radius: 10px;
   margin-left: 5px;
 }
 
-footer .social-media a:hover,
-footer .social-media a:focus {
+footer .footer-menu .social-media a:hover,
+footer .footer-menu .social-media a:focus {
   background: #a0793f;
+}
+
+footer .footer-copy hr {
+  border-color: rgba(255, 255, 255, 0.2);
+  z-index: 99;
+  position: relative;
+  bottom: 30px;
+  margin: 0;
+}
+
+footer .footer-copy p.copyright {
+  color: #707d84;
+  margin: 20px 0;
+}
+
+footer .footer-copy p.copyright span {
+  z-index: 100;
+  padding-right: 10px;
+  position: relative;
+  background-color: #37474f;
 }
 
 .ld.reverse {
