--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -22,7 +22,8 @@ $brand-danger: #bf5329;
 $header-main-color: #a0793f;
 $img_header: #fff url("/img/header_ornament.png") no-repeat 24% 0;
 // footer
-$img_footer: #37474f url("/img/footer_ornament.png") no-repeat;
+$bg_footer: #37474f;
+$img_footer: $bg_footer url("/img/footer_ornament1.png") no-repeat;
 $footer-main-color: #a0793f;
 
 // Typography
