gajadi dah pake bower

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -9,6 +9,7 @@
 
 // css selain bootstrap
 @import "node_modules/font-awesome/scss/font-awesome";
+@import "node_modules/animate.css/animate";
 
 // ridho custom
 @import "css";
