--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -25,6 +25,13 @@ $img_header: #fff url("/images/header_ornament.png") no-repeat 24% 0;
 $bg_footer: #37474f;
 $img_footer: $bg_footer url("/images/footer_ornament1.png") no-repeat;
 $footer-main-color: #a0793f;
+// loginpage
+$login-bgpage: #fff url("/images/header_ornament.png") no-repeat fixed center;
+$login-color-main: #dbb25e;
+$login-color-secondary: #baa377;
+$login-button-color:#f6cc81;
+$login-button-color:#d2a23f;
+$login-text-color: #b2965e;
 
 // Typography
 $icon-font-path: "~bootstrap-sass/assets/fonts/bootstrap/";
