--- a/resources/assets/sass/theme/_homepage.scss
+++ b/resources/assets/sass/theme/_homepage.scss
@@ -1,38 +1,36 @@
-.jumbotron {
-	background: #f7f4be;
-	.row.staging {
-		& > div {
-			&:not(:last-child):after{
-				content: ">";
-				position: absolute;
-				right: 0;
-				top: 50%;
-				transform: translate(0, -50%);
-				font-size: 2em;
+.row.staging {
+	padding: 3em 0;
+	& > div {
+		&:not(:last-child):after{
+			content: ">";
+			position: absolute;
+			right: 0;
+			top: 50%;
+			transform: translate(0, -50%);
+			font-size: 2em;
+			color:$header-main-color;
+		}
+		min-height:3em;
+		h1,
+		h2,
+		h3,
+		h4{
+			color:$header-main-color;
+			margin-top:0;
+			margin-bottom:0;
+			font-weight:400;
+			small{
 				color:$header-main-color;
 			}
-			min-height:3em;
-			h1,
-			h2,
-			h3,
-			h4{
-				color:$header-main-color;
-				margin-top:0;
-				margin-bottom:0;
-				font-weight:400;
-				small{
-					color:$header-main-color;
-				}
-			}
-			h1{
-				font-family: $font-family-sans-serif;
-				font-size:4em;
-			}
-			.fa{
-				color:$header-main-color;
-				font-size:2em;
-				margin:15px 0;
-			}
+		}
+		h1{
+			font-family: $font-family-sans-serif;
+			font-size:4em;
+		}
+		.fa{
+			color:$header-main-color;
+			font-size:2em;
+			margin:15px 0;
 		}
 	}
 }
