fix the captcha, and set limit order for plans

--- a/resources/assets/sass/_csslogin.scss
+++ b/resources/assets/sass/_csslogin.scss
@@ -35,7 +35,8 @@
 			padding: 0;
 			color: #fff;
 			padding: 8px 5px 14px 5px;
-			font-weight: lighter;
+			font-weight: bold;
+			font-size: 16px;
 			margin-bottom: 0;
 			line-height: 20px;
 			height: auto;
