--- a/public/css/app.css
+++ b/public/css/app.css
@@ -21116,7 +21116,8 @@ body {
   padding: 0;
   color: #fff;
   padding: 8px 5px 14px 5px;
-  font-weight: lighter;
+  font-weight: bold;
+  font-size: 16px;
   margin-bottom: 0;
   line-height: 20px;
   height: auto;
