--- a/public/css/AdminLTE.css
+++ b/public/css/AdminLTE.css
@@ -16042,6 +16042,30 @@ a:focus {
 }
 
 /*
+ * Misc: styles
+ * -----------
+ */
+
+.box-coin {
+  width: 100%;
+  height: 150px;
+  background-color: #fff;
+  border-radius: 5px;
+  font-size: 30px;
+  padding-left: 30px;
+  padding-right: 15px;
+}
+
+.box-coin small {
+  font-size: 12px;
+}
+
+.box-coin p {
+  font-size: 48px;
+  margin-top: 20px;
+}
+
+/*
  * Component: Main Header
  * ----------------------
  */
