--- a/resources/assets/adminLTE/scss/AdminLTE.scss
+++ b/resources/assets/adminLTE/scss/AdminLTE.scss
@@ -20,6 +20,9 @@
 @import "core";
 @import "mixins";
 @import "miscellaneous";
+// CUSTOM
+// -------
+@import "styles";
 //COMPONENTS
 //-----------
 @import "components/header";
