add fitur convert at dashboard seller

--- a/public/css/AdminLTE.css
+++ b/public/css/AdminLTE.css
@@ -16054,6 +16054,7 @@ a:focus {
   font-size: 30px;
   padding-left: 30px;
   padding-right: 15px;
+  margin-bottom: 20px;
 }
 
 .box-coin small {
@@ -16063,6 +16064,10 @@ a:focus {
 .box-coin p {
   font-size: 48px;
   margin-top: 20px;
+}
+
+.panel-body div {
+  padding: 5px;
 }
 
 /*
