--- a/resources/assets/adminLTE/scss/_styles.scss
+++ b/resources/assets/adminLTE/scss/_styles.scss
@@ -11,12 +11,18 @@
     font-size: 30px;
     padding-left: 30px;
     padding-right: 15px;
+    margin-bottom: 20px;
     small {
         font-size: 12px;
     }
     p{
         font-size:  48px;
         margin-top: 20px;
+    }
+}
+.panel-body {
+    div {
+        padding: 5px;
     }
 }
 
